# LRFutils

./: .gitignore  LICENSE  README.md  changelog.md  color.py  examples.ipynb  pyproject.toml  requirements.txt  setup.py  term.py  test.py  tests.ipynb  upload_on_pip.py  upload_on_pypi.py
LRF_utils.egg-info/: PKG-INFO  SOURCES.txt
LRFutils/: __init__.py  archive.py  color.py  log.py  progress.py  term.py
LRFutils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Leirof.egg-info/: PKG-INFO
docs/: archive.ipynb  archive.md  changelog.md  color.md  conf.py  getting_started.md  index.rst  logs.ipynb  logs.md  progress.ipynb  progress.md  requirements.txt  term.md
src/: examples.ipynb
src/LRFutils/: __init__.py  archive.py  color.py  logs.py  progress.py  term.py
