[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LRFutils"
version = "0.0.1"
authors = [
  { name="Vincent Foriel", email="vince.lrf@gmail.com" },
]
description = "A custom package made for colleagues me and some colleagues. Use it at your own risks ^^"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LeiRoF/Utils"
"Bug Tracker" = "https://github.com/LeiRoF/Utils/issues"